--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@ src="https://www.youtube.com/embed/zAlX1V3lK5s">
   </div>
 </center>
   </div>
+  <footer>
+    <center><p>made with love by<h1>hycient</h1></p></center>
+    <center><h6>facebook  : emerald hycient</h6></center>
+    <center><h6>whatsapp/phone  : +2347088639675</h6></center>
+  </footer>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
