--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>youtube video downloader</title>
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <style>
+   ul {
+     list-style-type:none;
+   }
+   footer{
+     margin-top:30vh;
+   }
+   </style>
   </head>
   <body>
 <div class="container">
